# mussumsify

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
.github/workflows/: main.yml  release.yml
mussumsify/: __main__.py  base.py  cli.py
tests/: test_base.py
