[tool.poetry]
name = "a-flask-test"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
gitchangelog = "^3.0.4"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mussumsify = 'mussumsify.__main__:main'
