[tool.poetry]
name = "mussumsify"
version = "0.0.1"
description = "Mussum, cacilds vidis litro abertis. Quem num gosta di mé, boa gentis num é. Detraxit consequat et quo num tendi nada. Delegadis gente finis, bibendum egestas augue arcu ut est. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!"
authors = ["nkiomi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
magentic = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
gitchangelog = "^3.0.4"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mussumsify = 'mussumsify.__main__:main'
